[gateway] remove plug gateway logic
