# apps/boruta_admin/lib/boruta_admin_web/views/upstream_view.ex
@@ -31,9 +31,6 @@ defmodule BorutaAdminWeb.UpstreamView do
       strip_uri: upstream.strip_uri,
       authorize: upstream.authorize,
       required_scopes: upstream.required_scopes,
-      pool_size: upstream.pool_size,
-      pool_count: upstream.pool_count,
-      max_idle_time: upstream.max_idle_time,
       keepalive: upstream.keepalive,
       error_content_type: upstream.error_content_type,
       forbidden_response: upstream.forbidden_response,
